--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,14 @@
   justify-content: center;
   padding: 24px;
 }
+
+.header-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  span {
+    display: inline-block;
+    margin: 0 10px;
+  }
+}
