--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,4 +1,13 @@
 <div class="app-button">
-  <!-- Replace the text below with your code -->
-  Button
+  <ng-container *ngIf="text; then textTemplate; else iconTemplate"></ng-container>
+
+  <ng-template #textTemplate>
+    <span>{{text}}</span>
+  </ng-template>
+  
+  <ng-template #iconTemplate>
+   <span>{{iconName}}</span>
+  </ng-template>
+
+ <ng-content></ng-content>
 </div>
