--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,18 @@
 <app-header>
   <div class="header-login">
     <span>User name</span>
-    <app-button text="LOGIN"></app-button>
+    <app-button (click)="onOpenLogin()" text="LOGIN"></app-button>
   </div>
 </app-header>
 <div class="app-root">
-  <!-- Search component -->
-  <app-search></app-search>
-
-  <!-- Info component -->
-  <app-info 
-   title="Title"
-   text="Please use 'Add new course' button to add your first course"
-   >
-    <app-button text="Add new course"></app-button>
-  </app-info>
-
-  <!-- Course Card component -->
-  <!--<app-course-card></app-course-card>-->
-
-  <!-- Login Form component -->
-  <app-login-form></app-login-form>
-
-  <!-- Login Form component -->
-  <app-registration-form></app-registration-form>
-
-  <!-- Login Form component -->
-  <app-course-form></app-course-form>
+  
+  @if(isLoginPage){
+    <!-- Authentication Form component -->
+    <app-auth></app-auth>
+  } @else if (isCreateCourse) {
+    <!-- Course Form component -->
+    <app-course-form></app-course-form>
+  }
 
   <!-- Modal component -->
   <!-- <app-modal [message]="'Message'" [title]="'Title'" [okButtonText]="'Ok'" [cancelButtonText]="'Cancel'"></app-modal> -->
