--- a/src/app/shared/components/course-form/course-form.component.scss
+++ b/src/app/shared/components/course-form/course-form.component.scss
@@ -1,37 +1,94 @@
-@import 'src/app/shared/styles/styles';
+@import "src/app/shared/styles/styles";
 
 .course {
- min-width: 60vw;
+  min-width: 60vw;
+}
 
-  &__flex {
+.course__flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+
+  & input {
+    flex: 1;
+  }
+
+  & app-button {
+    margin-left: 16px;
+  }
+
+  & .course__duration {
+    margin-left: 16px;
+  }
+}
+
+.course__authors {
+  margin-top: 8px;
+  display: flex;
+
+  &-item {
+    margin-right: 10px;
+  }
+}
+
+.course__icon {
+  margin-left: 4px;
+  cursor: pointer;
+}
+
+.form__button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: 20px;
+
+  & app-button {
+    margin-left: 20px;
+  }
+}
+
+.authors-section {
+  display: flex;
+  justify-content: space-between;
+  
+  & > div {
+    flex: 1;
+  }
+
+  .authors-list {
     display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-
-    & input {
-      flex: 1;
-    }
-
-    & app-button {
-      margin-left: 16px;
-    }
-
-    & .course__duration {
-      margin-left: 16px;
-    }
+    flex-direction: column;
+    text-align: right;
   }
+}
 
-  &__authors {
-    margin-top: 8px;
-    display: flex;
+.course__authors, .authors {
+ display: flex;
+ flex-direction: column;
+}
 
-    &-item {
-      margin-right: 10px;
-    }
+.course__author, .author {
+  display: flex;
+
+  button {
+    max-height: 44px;
+    margin-top: 4px;
+    margin-left: 8px;
   }
+}
 
-  &__icon {
-    margin-left: 4px;
-    cursor: pointer;
-  }
+.w-30 {
+  max-width: 30%;
+}
+.w-35 {
+  max-width: 35%;
+}
+.w-50 {
+  max-width: 50%;
+}
+.w-65 {
+  max-width: 65%;
+}
+.w-70 {
+  max-width: 70%;
 }
