--- a/src/app/shared/components/registration-form/registration-form.component.html
+++ b/src/app/shared/components/registration-form/registration-form.component.html
@@ -1,28 +1,83 @@
 <h2 class="text-align-center">Registration</h2>
 <div class="app-plate">
-  <div class="registration-form">
+  <div
+    [formGroup]="registrationForm"
+    (ngSubmit)="onSubmitClick()"
+    class="registration-form"
+  >
     <div>
       <div class="form__control">
         <label for="name">Name</label>
-        <!--Use the name `name` for the form control.-->
-        <input type="text" id="name" placeholder="Input text"/>
-        <span id="nameErrorMessage" class="text-danger">Name is required.</span>
+        <input
+          formControlName="name"
+          required
+          type="text"
+          id="name"
+          placeholder="Input text"
+        />
+        @if (nameControl.touched || isSubmitted) {
+          <span [hidden]="!nameControl.hasError('required')" class="text-danger"
+            >Name is required.</span
+          >
+          <span
+            [hidden]="!nameControl.hasError('minLength')"
+            class="text-danger"
+          >
+            Name shall be more than six characters.
+          </span>
+        }
       </div>
       <div class="form__control">
-        <!--Use the name `email` for the form control.-->
         <label for="email">Email</label>
-        <input type="text" id="email" placeholder="Input text"/>
-        <span id="emailErrorMessage" class="text-danger">Email is required.</span>
+        <input
+          formControlName="email"
+          required
+          type="text"
+          id="email"
+          placeholder="Input text"
+        />
+        @if (emailControl.touched || isSubmitted) {
+          <span
+            [hidden]="!emailControl.hasError('required')"
+            class="text-danger"
+            >Email is required.</span
+          >
+          <span [hidden]="!emailControl.hasError('email')">
+            <br />Email shall be a valid email.
+          </span>
+        }
       </div>
       <div class="form__control">
-        <!--Use the name `password` for the form control.-->
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Input text"/>
-        <span id="passwordErrorMessage" class="text-danger">Password is required.</span>
+        <input
+          formControlName="password"
+          required
+          type="password"
+          id="password"
+          placeholder="Input text"
+        />
+        @if (passwordControl.touched || isSubmitted) {
+          <span
+            [hidden]="!passwordControl.hasError('required')"
+            class="text-danger"
+            >Password is required.</span
+          >
+        }
       </div>
     </div>
+    <div>
+      <span
+        >Already have an account?
+        <strong (click)="onSignInClick()" class="sign-in"
+          >Sign in.</strong
+        ></span
+      >
+    </div>
     <div class="form__action">
-      <app-button></app-button>
+      <app-button
+        (click)="onSubmitClick()"
+        text="Create an account"
+      ></app-button>
     </div>
   </div>
 </div>
