--- a/src/app/shared/components/registration-form/registration-form.component.scss
+++ b/src/app/shared/components/registration-form/registration-form.component.scss
@@ -1,4 +1,4 @@
-@import 'src/app/shared/styles/styles';
+@import "src/app/shared/styles/styles";
 
 .registration-form {
   width: 260px;
@@ -6,4 +6,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.sign-in {
+  text-decoration: underline;
+  cursor: pointer;
 }
