--- a/src/app/shared/styles/variables/colors.scss
+++ b/src/app/shared/styles/variables/colors.scss
@@ -1,4 +1,4 @@
-$color-white: #FFF;
-$color-gray: #CFCFCF;
-$color-red: #FF0000;
-$color-dark-gray: #333E48;
+$color-white: #fff;
+$color-gray: #cfcfcf;
+$color-red: #ff0000;
+$color-dark-gray: #333e48;
