--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 $color-white: #fff;
-$color-gray: #CFCFCF;
-$color-red: #FF0000;
+$color-gray: #cfcfcf;
+$color-red: #ff0000;
+
+* {
+  box-sizing: border-box;
+}
 
 html {
   height: 100%;
@@ -10,8 +14,8 @@ html {
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
-  background-color: #F7F7F7;
-  color: #333E48;
+  background-color: #f7f7f7;
+  color: #333e48;
   height: 100%;
 }
 
@@ -28,10 +32,11 @@ textarea {
   resize: none;
   font-family: "Open Sans", sans-serif;
 }
-
-input:invalid,
-textarea:invalid {
-  border-color: $color-red;
+.submitted {
+  input:invalid,
+  textarea:invalid {
+    border-color: $color-red;
+  }
 }
 
 label {
